apps/staging/homelab-ingress/commafeed-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commafeed-ingress
  namespace: commafeed
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: commafeed.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: commafeed
                port:
                  number: 80
